{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 19,
  "lineage": "",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_test_ip_for_nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d8538a53d88de1e0",
            "domain": "vpc",
            "id": "eipalloc-0f01a71cf12a3b368",
            "network_interface": "eni-0d5725dcff5fb0cdf",
            "private_dns": "ip-100-0-1-42.ap-northeast-1.compute.internal",
            "private_ip": "100.0.1.42",
            "public_dns": "ec2-18-179-217-8.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.217.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_test_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e1128435cf76de2c",
            "owner_id": "240928070900",
            "tags": {
              "Name": "terraform_test_igw"
            },
            "vpc_id": "vpc-085516d3f8f6801af"
          },
          "dependencies": [
            "aws_vpc.wordpress_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_test_nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f01a71cf12a3b368",
            "id": "nat-0852a7b0a3e30a53e",
            "network_interface_id": "eni-0d5725dcff5fb0cdf",
            "private_ip": "100.0.1.42",
            "public_ip": "18.179.217.8",
            "subnet_id": "subnet-0468596059578f067",
            "tags": {
              "Name": "terraform_test_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.terraform_test_ip_for_nat_gw",
            "aws_internet_gateway.terraform_test_igw",
            "aws_subnet.subnet-0468596059578f067-Public-Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-0ce0bdf0810935868",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ce0bdf0810935868",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "240928070900",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0468596059578f067",
              "subnet-09884f6f01e76da38"
            ],
            "tags": {},
            "vpc_id": "vpc-085516d3f8f6801af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terraform_test_route_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07317a4c780224ec71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0852a7b0a3e30a53e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07317a4c780224ec7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.terraform_test_ip_for_nat_gw",
            "aws_internet_gateway.terraform_test_igw",
            "aws_nat_gateway.terraform_test_nat_gw",
            "aws_route_table.terraform_test_rtb_private",
            "aws_subnet.subnet-0468596059578f067-Public-Subnet",
            "aws_vpc.wordpress_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terraform_test_route_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e1128435cf76de2c",
            "id": "r-rtb-080db8f743a0cfeab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080db8f743a0cfeab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.terraform_test_igw",
            "aws_route_table.terraform_test_rtb_public",
            "aws_vpc.wordpress_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-0997c59914af4966b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0997c59914af4966b",
            "owner_id": "240928070900",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "vpc_id": "vpc-085516d3f8f6801af"
          },
          "dependencies": [
            "aws_vpc.wordpress_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_test_rtb_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07317a4c780224ec7",
            "owner_id": "240928070900",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0852a7b0a3e30a53e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_test_rtb_private"
            },
            "vpc_id": "vpc-085516d3f8f6801af"
          },
          "dependencies": [
            "aws_vpc.wordpress_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_test_rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-080db8f743a0cfeab",
            "owner_id": "240928070900",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1128435cf76de2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_test_rtb_public"
            },
            "vpc_id": "vpc-085516d3f8f6801af"
          },
          "dependencies": [
            "aws_vpc.wordpress_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_test_rtb_a_database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f79e72addbd612f4",
            "route_table_id": "rtb-07317a4c780224ec7",
            "subnet_id": "subnet-0968dd1146a611052"
          },
          "dependencies": [
            "aws_route_table.terraform_test_rtb_private",
            "aws_subnet.subnet-09884f6f01e76da38-Database-Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_test_rtb_a_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f7c8a88daeae0c9",
            "route_table_id": "rtb-07317a4c780224ec7",
            "subnet_id": "subnet-09884f6f01e76da38"
          },
          "dependencies": [
            "aws_route_table.terraform_test_rtb_private",
            "aws_subnet.subnet-09884f6f01e76da38-Private-Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_test_rtb_a_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049ce1c026ae1871b",
            "route_table_id": "rtb-080db8f743a0cfeab",
            "subnet_id": "subnet-0468596059578f067"
          },
          "dependencies": [
            "aws_route_table.terraform_test_rtb_public",
            "aws_subnet.subnet-0468596059578f067-Public-Subnet"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_test_sg_ssh",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:240928070900:security-group/sg-0ffe1050e4ecdebbc",
            "description": "terraform_test_sg_ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffe1050e4ecdebbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform_test_sg_ssh",
            "name_prefix": null,
            "owner_id": "240928070900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_test_sg_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-085516d3f8f6801af"
          },
          "dependencies": [
            "aws_vpc.wordpress_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-0468596059578f067-Public-Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:240928070900:subnet/subnet-0468596059578f067",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "100.0.1.0/24",
            "id": "subnet-0468596059578f067",
            "map_public_ip_on_launch": false,
            "owner_id": "240928070900",
            "tags": {
              "Name": "Public-Subnet"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-085516d3f8f6801af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-09884f6f01e76da38-Database-Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:240928070900:subnet/subnet-0968dd1146a611052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "100.0.3.0/24",
            "id": "subnet-0968dd1146a611052",
            "map_public_ip_on_launch": false,
            "owner_id": "240928070900",
            "tags": {
              "Name": "Datbase-Subnet"
            },
            "vpc_id": "vpc-085516d3f8f6801af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-09884f6f01e76da38-Private-Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:240928070900:subnet/subnet-09884f6f01e76da38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "100.0.2.0/24",
            "id": "subnet-09884f6f01e76da38",
            "map_public_ip_on_launch": false,
            "owner_id": "240928070900",
            "tags": {
              "Name": "Private-Subnet"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-085516d3f8f6801af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:240928070900:vpc/vpc-085516d3f8f6801af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ce0bdf0810935868",
            "default_route_table_id": "rtb-0997c59914af4966b",
            "default_security_group_id": "sg-06a5d11565d016f3c",
            "dhcp_options_id": "dopt-416adf26",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-085516d3f8f6801af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0997c59914af4966b",
            "owner_id": "240928070900",
            "tags": {
              "Name": "wordpress_dev"
            }
          }
        }
      ]
    }
  ]
}